# framework-example

./: .envrc  .gitignore  README.md  data.dvc  dvc.yaml  eval.html  flake.nix  index.html  model.pth  params.yaml  pyproject.toml  quickstart_tutorial.py  quickstart_tutorial_eval.py  robots.txt  search.json  settings.ini  sitemap.xml  training.html  training.json
.conda/: environment.yaml
.dvc/: config
.nix/: default.nix
.nix/framework-example/: package.nix  shell.nix
framework_example/: _modidx.py
nbs/: 00_core.ipynb  00_core.nbconvert.ipynb  00_training.ipynb  01_eval.ipynb  index.ipynb  nbdev.yml  sidebar.yml
training/: metrics.json  report.html
training/plots/metrics/test/: accuracy.tsv  loss.tsv
training/plots/metrics/train/: loss.tsv
training/scalars/test/: accuracy.tsv  loss.tsv
training/scalars/train/: loss.tsv
