[tool.pdm]

[project]
name = "framework-example"
version = "0.1.0"
description = ""
authors = [
    {name = "painswor28", email = "painswor@nd.edu"},
]
dependencies = [
    "ipython>=8.9.0",
    "jupyterlab>=3.6.1",
    "matplotlib>=3.6.3",
    "pandas>=1.5.3",
    "torch>=1.13.1",
    "torchvision>=0.14.1",
    "fastai>=2.7.10",
    "fastbook>=0.0.29",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
